--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@types/jasmine": "3.8.1",
     "@types/jquery": "3.5.6",
     "@types/node": "16.3.2",
+    "angular-cli-ghpages": "^1.0.0-rc.2",
     "codelyzer": "6.0.2",
     "jasmine-core": "3.8.0",
     "jasmine-spec-reporter": "7.0.0",
